--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_markers_count = 3\n",
+    "unique_markers_count = 2\n",
     "\n",
     "plot.set_markers_number(unique_markers_count)"
    ]
@@ -134,16 +134,6 @@
    "metadata": {},
    "source": [
     "Validate chosen bounding boxes and extract marker images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# marker_selector_widget.bboxes = [{'x': 329, 'y': 806, 'width': 64, 'height': 64, 'label': 'marker1'},\n",
-    "#  {'x': 262, 'y': 754, 'width': 62, 'height': 52, 'label': 'marker2'}]"
    ]
   },
   {
@@ -203,24 +193,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roi_widget.bboxes = [{'x': 238,\n",
-    "  'y': 263,\n",
-    "  'width': 1199,\n",
-    "  'height': 620,\n",
-    "  'label': 'ROI for marker1'},\n",
-    " {'x': 253,\n",
-    "  'y': 221,\n",
-    "  'width': 1202,\n",
-    "  'height': 666,\n",
-    "  'label': 'ROI for marker2'}]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.draw_region_of_interest(marker=\"marker3\")"
+    "plot.draw_region_of_interest(marker=\"marker1\")"
    ]
   },
   {
@@ -258,38 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot._images_algorithm_input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "correlation_maps = plot.run_matching()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imshow_interactive(correlation_maps[\"marker2\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# res = plot._match_single_marker(\n",
-    "#     plot.data,\n",
-    "#     plot.markers[\"marker1\"],\n",
-    "#     plot._marker_masks[\"marker1\"],\n",
-    "# )"
    ]
   },
   {
@@ -319,19 +260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# detector_widget_marker1 = DetectorWidget(plot, marker=\"marker1\")\n",
-    "# # detector_widget_marker1.apply_widget_settings(**settings)  # change settings if you want\n",
-    "# detector_widget_marker1.widget()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "detector_widget = DetectorWidgetCombined(plot)\n",
-    "detector_widget.apply_widget_settings(**settings)   # change settings if you want\n",
+    "detector_widget.apply_widget_settings(**settings)\n",
     "detector_widget.widget()"
    ]
   },
