fix Dockerfile, little fixes in main.ipynb

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -251,7 +251,10 @@
     "    \"marker_size\": 70,\n",
     "    \"marker_color\": \"yellow\",\n",
     "    \"marker_type\": \"*\",\n",
-    "}"
+    "}\n",
+    "\n",
+    "detector_widget = DetectorWidgetCombined(plot)\n",
+    "detector_widget.apply_widget_settings(**settings)"
    ]
   },
   {
@@ -260,8 +263,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detector_widget = DetectorWidgetCombined(plot)\n",
-    "detector_widget.apply_widget_settings(**settings)\n",
     "detector_widget.widget()"
    ]
   },
@@ -364,7 +365,7 @@
     "dump_coords_csv(\n",
     "    x=x_factual,\n",
     "    y=y_factual,\n",
-    "    savepath=f\"detections.csv\"\n",
+    "    savepath=f\"../datasets/detections.csv\"\n",
     ")"
    ]
   },
