add tabs with markers to ROI selector widget; add opportunity to specify ROI widget size

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -34,7 +34,7 @@
     "from scanplot.plotting import draw_image\n",
     "from scanplot.view import (\n",
     "    CoordinatesMapperWidget, MarkerSelectorBBoxWidget,\n",
-    "    ROISelectorBBoxWidget, DetectorWidgetCombined\n",
+    "    ROISelectorCombinedWidget, DetectorWidgetCombined\n",
     ")\n",
     "from scanplot.core import Plot, CoordinatesConverter"
    ]
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "dataset_path = pathlib.Path(\"../datasets/\")\n",
-    "plot_number = 103\n",
+    "plot_number = 37\n",
     "plot_image_filepath = dataset_path / \"plot_images\" / f\"plot{plot_number}.png\""
    ]
   },
@@ -177,9 +177,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roi_widget = ROISelectorBBoxWidget(\n",
+    "roi_widget = ROISelectorCombinedWidget(\n",
     "    image_data=plot.data, \n",
     "    markers_number=plot.markers_number,\n",
+    "    fig_size=10,\n",
     ")"
    ]
   },
@@ -214,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.draw_region_of_interest(marker=\"marker1\")"
+    "plot.draw_region_of_interest(marker=\"marker2\")"
    ]
   },
   {
