add opportunity to specify marker selector widget size

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -33,7 +33,7 @@
     "from scanplot.io import load_image, dump_coords_csv\n",
     "from scanplot.plotting import draw_image\n",
     "from scanplot.view import (\n",
-    "    CoordinatesMapperWidget, MarkerSelectorBBoxWidget,\n",
+    "    CoordinatesMapperWidget, MarkerSelectorWidget,\n",
     "    ROISelectorCombinedWidget, DetectorWidgetCombined\n",
     ")\n",
     "from scanplot.core import Plot, CoordinatesConverter"
@@ -114,9 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "marker_selector_widget = MarkerSelectorBBoxWidget(\n",
+    "marker_selector_widget = MarkerSelectorWidget(\n",
     "    image_data=plot.data,\n",
     "    markers_number=plot.markers_number,\n",
+    "    fig_size=15,\n",
     ")"
    ]
   },
@@ -215,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot.draw_region_of_interest(marker=\"marker2\")"
+    "plot.draw_region_of_interest(marker=\"marker1\")"
    ]
   },
   {
