--- a/examples/select_markers.ipynb
+++ b/examples/select_markers.ipynb
@@ -13,7 +13,7 @@
     "from scanplot.io import load_image, save_markers\n",
     "from scanplot.plotting import draw_image\n",
     "from scanplot.core.process_template import extract_markers_from_image\n",
-    "from scanplot.view import MarkerSelectorBBoxWidget"
+    "from scanplot.view import MarkerSelectorWidget"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "markers_number = 3\n",
     "\n",
     "# create widget\n",
-    "marker_selector = MarkerSelectorBBoxWidget(source_image, markers_number)"
+    "marker_selector = MarkerSelectorWidget(source_image, markers_number)"
    ]
   },
   {
