change api for CoordinatesConverter: export converter params from mapper and import them to converter

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -312,6 +312,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converter_params = mapper_widget.export_parameters()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -324,8 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "converter = CoordinatesConverter()\n",
-    "converter.import_parameters_from_mapper(mapper_widget)"
+    "converter = CoordinatesConverter(converter_params)"
    ]
   },
   {
