replace mapper widget in main.ipynb

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -33,7 +33,7 @@
     "from scanplot.io import load_image, dump_coords_csv\n",
     "from scanplot.plotting import draw_image\n",
     "from scanplot.view import (\n",
-    "    CoordinatesMapperWidget, MarkerSelectorWidget,\n",
+    "    CartesianCoordsMapperWidget, MarkerSelectorWidget,\n",
     "    ROISelectorCombinedWidget, DetectorWidgetCombined\n",
     ")\n",
     "from scanplot.core import Plot, CoordinatesConverter"
@@ -297,9 +297,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper_widget = CoordinatesMapperWidget(image)\n",
+    "mapper_widget = CartesianCoordsMapperWidget(image)\n",
     "\n",
-    "mapper_widget.apply_widget_settings(fig_size=10)"
+    "mapper_widget.apply_widget_settings(\n",
+    "    fig_size=8,\n",
+    "    line_width=1,\n",
+    "    line_color=\"red\",\n",
+    "    marker_size=6,\n",
+    "    marker_color=\"green\"\n",
+    ")"
    ]
   },
   {
