update gif in docs

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "dataset_path = pathlib.Path(\"../datasets/\")\n",
-    "plot_number = 37\n",
+    "plot_number = 22\n",
     "plot_image_filepath = dataset_path / \"plot_images\" / f\"plot{plot_number}.png\""
    ]
   },
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_markers_count = 2\n",
+    "unique_markers_count = 3\n",
     "\n",
     "plot.set_markers_number(unique_markers_count)"
    ]
@@ -323,7 +323,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "converter_params = mapper_widget.export_parameters()"
+    "converter_params = mapper_widget.export_parameters()\n",
+    "converter_params"
    ]
   },
   {
