format code, update notebook with mapper widget example

--- a/examples/example_mapper_anywidget.ipynb
+++ b/examples/example_mapper_anywidget.ipynb
@@ -5,7 +5,7 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# Mapper interactive widget"
+    "# Coordinates Mapper interactive widget"
    ]
   },
   {
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scanplot.view import MapperCanvasWidget\n",
+    "from scanplot.view import MapperCanvasWidget, CartesianCoordsMapperWidget, CoordinatesMapperWidget\n",
     "from scanplot.io import load_image"
    ]
   },
@@ -44,21 +44,29 @@
     "plot_number = 22\n",
     "img_path = f\"../datasets/plot_images/plot{plot_number}.png\"\n",
     "\n",
-    "image = load_image(img_path)\n"
+    "image = load_image(img_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
+   "metadata": {},
+   "source": [
+    "## Mapper Canvas Widget using anywidget"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "canvas_widget = MapperCanvasWidget()\n",
+    "mapper_widget_canvas = MapperCanvasWidget()\n",
     "\n",
-    "canvas_widget.set_image(image)\n",
+    "mapper_widget_canvas.set_image(image)\n",
     "\n",
-    "canvas_widget.apply_widget_settings(\n",
+    "mapper_widget_canvas.apply_widget_settings(\n",
     "    fig_size=8,\n",
     "    line_width=1,\n",
     "    line_color=\"red\",\n",
@@ -70,17 +78,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "canvas_widget"
+    "mapper_widget_canvas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "## Mapper Full Widget"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper_widget = CartesianCoordsMapperWidget(image)\n",
+    "\n",
+    "mapper_widget.apply_widget_settings(\n",
+    "    fig_size=8,\n",
+    "    line_width=1,\n",
+    "    line_color=\"red\",\n",
+    "    marker_size=6,\n",
+    "    marker_color=\"green\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapper_widget.widget()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = mapper_widget.export_parameters()\n",
+    "params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": []
