--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -36,7 +36,7 @@
     "    CartesianCoordsMapperWidget, MarkerSelectorWidget,\n",
     "    ROISelectorCombinedWidget, DetectorWidgetCombined\n",
     ")\n",
-    "from scanplot.core import Plot, CoordinatesConverter"
+    "from scanplot.core import Plot, CoordinatesConverter, invert_image"
    ]
   },
   {
@@ -78,6 +78,8 @@
    "outputs": [],
    "source": [
     "image = load_image(plot_image_filepath)\n",
+    "\n",
+    "# image = invert_image(image)  # only for plots with black background\n",
     "\n",
     "plot = Plot(image)\n",
     "plot.draw()"
@@ -169,7 +171,10 @@
     "## 3. (optional step) Select region of interest\n",
     "\n",
     "For each marker type you can specify its own region of interest.\n",
-    "Default ROI is a whole image."
+    "Default ROI is a whole image.\n",
+    "\n",
+    "This step is optional, but selecting ROI for each marker can significantly improve the final detection result.\n",
+    "Selecting ROI is also useful to avoid detections in the area of legend."
    ]
   },
   {
