update main notebook, add comments

--- a/examples/main.ipynb
+++ b/examples/main.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2 as cv\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -67,7 +68,9 @@
    "outputs": [],
    "source": [
     "dataset_path = pathlib.Path(\"../datasets/\")\n",
-    "plot_number = 22\n",
+    "\n",
+    "plot_number = 37\n",
+    "\n",
     "plot_image_filepath = dataset_path / \"plot_images\" / f\"plot{plot_number}.png\""
    ]
   },
@@ -105,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_markers_count = 3\n",
+    "unique_markers_count = 2\n",
     "\n",
     "plot.set_markers_number(unique_markers_count)"
    ]
@@ -119,7 +122,7 @@
     "marker_selector_widget = MarkerSelectorWidget(\n",
     "    image_data=plot.data,\n",
     "    markers_number=plot.markers_number,\n",
-    "    fig_size=10,\n",
+    "    fig_size=5,\n",
     ")"
    ]
   },
@@ -232,12 +235,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Method `run_matching()` works in several modes:\n",
+    "- `mode='basic'` - perform basic tamplate matching\n",
+    "- `mode='color'` - perform image filtration by marker colors and then run basic matching\n",
+    "- `mode='binary'` - perform image and marker binarization and then run basic matching (useful for black and white images with dense areas of overlapping markers)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "correlation_maps = plot.run_matching()"
+    "correlation_maps = plot.run_matching(mode=\"color\", color_delta=100)\n",
+    "# correlation_maps = plot.run_matching(mode=\"binary\")"
    ]
   },
   {
@@ -254,10 +268,10 @@
    "outputs": [],
    "source": [
     "settings = {\n",
-    "    \"fig_size\": 9,\n",
-    "    \"marker_size\": 70,\n",
+    "    \"fig_size\": 10,\n",
+    "    \"marker_size\": 40,\n",
     "    \"marker_color\": \"yellow\",\n",
-    "    \"marker_type\": \"*\",\n",
+    "    \"marker_type\": \".\",\n",
     "}\n",
     "\n",
     "detector_widget = DetectorWidgetCombined(plot)\n",
@@ -305,7 +319,7 @@
     "mapper_widget = CartesianCoordsMapperWidget(image)\n",
     "\n",
     "mapper_widget.apply_widget_settings(\n",
-    "    fig_size=8,\n",
+    "    fig_size=5,\n",
     "    line_width=1,\n",
     "    line_color=\"red\",\n",
     "    marker_size=6,\n",
